# SOLAT_v4.0

./: .cursorrules  .gitignore  CODEOWNERS  LICENSE  README.md  eslint.config.mjs  package.json
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: ARCHITECTURE.md  BUILD_LOG.md  PROJECT_MEMORY.md  RUNBOOK.md  STOP_POINTS.md
engine/: README.md  pyproject.toml
engine/configs/: ig_accounts.json
engine/solat_engine/: __init__.py  __main__.py
engine/solat_engine/api/: __init__.py  app.py
engine/solat_engine/tools/: __init__.py
engine/tests/: test_health.py
shared/contracts/: README.md
