[project]
name = "solat-engine"
version = "0.1.0"
description = "SOLAT v4.0 IG-only trading engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.8",
  "uvicorn[standard]>=0.34.0",
  "httpx>=0.28.1",
  "websockets>=14.2",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.7.1",
  "orjson>=3.10.15",
  "pyarrow>=19.0.1",
  "duckdb>=1.2.0"
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.3",
  "ruff>=0.9.7",
  "mypy>=1.15.0"
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
